--- a/view/users/home.ejs
+++ b/view/users/home.ejs
@@ -60,6 +60,7 @@
                         <div class="navbar-nav mx-auto">
                             <a href="/home" class="nav-item nav-link active">Home</a>
                             <a href="/cart" class="nav-item nav-link active">Cart</a>
+                            <a href="/cart" class="nav-item nav-link active">View Orders</a>
 
                             
                         </div>
