--- a/view/users/cart.ejs
+++ b/view/users/cart.ejs
@@ -7,7 +7,10 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+        <!-- favicon -->
+        <link href="img/food.png" rel="icon">
 
+        
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
