--- a/view/users/orderPlaced.ejs
+++ b/view/users/orderPlaced.ejs
@@ -6,6 +6,8 @@
 <title>Order Placed</title>
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 <link href="bootstrap.min.css" rel="stylesheet">
+ <!-- favicon -->
+ <link href="img/food.png" rel="icon">
 </head>
 <body>
 
