--- a/view/users/otp.ejs
+++ b/view/users/otp.ejs
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+ <!-- favicon -->
+ <link href="img/food.png" rel="icon">
+ 
   <style>
     body {
       background: #eee;
